<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
<ImageView
    android:id="@+id/abou_logo"
    android:padding="10dp"
    android:src="@mipmap/logo"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/about_title"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/organize"
        android:textColor="#333"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/about_version"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/app_version"
        android:textColor="#666"
        android:padding="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/about_url"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="#666"
        android:text="@string/QQ"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:src="@mipmap/qrecode"
        android:id="@+id/about_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>