<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

        <ImageView
            android:layout_marginTop="20sp"
            android:id="@+id/information_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@mipmap/logo"/>


    <LinearLayout
        android:id="@+id/user_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:background="@drawable/listview_item_textview_style"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="20sp"
            android:text="@string/user_info"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_marginRight="5sp"
            android:src="@android:drawable/ic_media_play"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notice_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/listview_item_textview_style"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="20sp"
            android:text="@string/notice"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_marginRight="5sp"
            android:src="@android:drawable/ic_media_play"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/update_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/listview_item_textview_style"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="20sp"
            android:text="@string/update_version"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_marginRight="5sp"
            android:src="@android:drawable/ic_media_play"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_us_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/listview_item_textview_style"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="20sp"
            android:text="@string/about_us"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_marginRight="5sp"
            android:src="@android:drawable/ic_media_play"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/unlogin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/listview_item_textview_style"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="20sp"
            android:text="@string/unlogin"


            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_marginRight="5sp"
            android:src="@android:drawable/ic_media_play"/>
    </LinearLayout>

</LinearLayout>